--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Rock Paper Scissors</title>
 </head>
 <body>
-    <script src="./scripts/script.js"></script>
+	<header>
+		<h1>Rock Paper Scissors</h1>
+	</header>
+	<div>
+		<div class="player-box">
+      <h2>Player</h2>
+			<div class="select-buttons">
+				<button>Rock</button>
+        <button>Paper</button>
+				<button>Scissors</button>
+			</div>
+		</div>
+		<div class="scores-box">
+      <h2>Score</h2>
+    </div>
+    <h2>Computer</h2>
+		<div class="computer-box">
+      <button>Rock</button>
+      <button>Paper</button>
+      <button>Scissors</button>
+    </div>
+	</div>
+	<!-- <script src="./scripts/script.js"></script> -->
 </body>
 </html>
