Add basic styles

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="styles/reset.css" rel="stylesheet" type="text/css">
   <link href="styles/style.css" rel="stylesheet" type="text/css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=New+Rocker&display=swap" rel="stylesheet">
 	<title>Rock Paper Scissors</title>
 </head>
 <body>
 	<header>
 		<h1>Rock Paper Scissors</h1>
 	</header>
-	<div>
+	<div class="container">
 		<div class="player-box">
       <h2>Player</h2>
 			<div class="select-buttons">
@@ -24,11 +26,13 @@
 		<div class="scores-box">
       <h2>Score</h2>
     </div>
-    <h2>Computer</h2>
-		<div class="computer-box">
-      <button>Rock</button>
-      <button>Paper</button>
-      <button>Scissors</button>
+    <div class="computer-box">
+      <h2>Computer</h2>
+      <div class="select-buttons">
+        <button>Rock</button>
+        <button>Paper</button>
+        <button>Scissors</button>
+      </div>
     </div>
 	</div>
 	<!-- <script src="./scripts/script.js"></script> -->
