Add and style icons for players and buttons

--- a/index.html
+++ b/index.html
@@ -16,22 +16,40 @@
 	</header>
 	<div class="container">
 		<div class="player-box">
-      <h2>Player</h2>
+      <div class="player-icon">
+        <h2>Player</h2>
+        <img src="./icons/player.png">
+      </div>
 			<div class="select-buttons">
-				<button>Rock</button>
-        <button>Paper</button>
-				<button>Scissors</button>
+				<button>Rock
+          <img class="icon" src="./icons/rock.png">
+        </button>
+        <button>Paper
+          <img class="icon" src="./icons/paper.png">
+        </button>
+				<button>Scissors
+          <img class="icon" src="./icons/scissors.png">
+        </button>
 			</div>
 		</div>
 		<div class="scores-box">
       <h2>Score</h2>
     </div>
     <div class="computer-box">
-      <h2>Computer</h2>
+      <div class="computer-icon">
+        <h2>Computer</h2>
+        <img src="./icons/computer.png">
+      </div>
       <div class="select-buttons">
-        <button>Rock</button>
-        <button>Paper</button>
-        <button>Scissors</button>
+				<button>Rock
+          <img class="icon mirror" src="./icons/rock.png">
+        </button>
+        <button>Paper
+          <img class="icon mirror" src="./icons/paper.png">
+        </button>
+				<button>Scissors
+          <img class="icon mirror" src="./icons/scissors.png">
+        </button>
       </div>
     </div>
 	</div>
