Add situational classes for buttons

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
         <img src="./icons/computer.png">
       </div>
       <div class="select-buttons">
-				<button>Rock
+				<button class="disabled">Rock
           <img class="icon mirror" src="./icons/rock.png">
         </button>
-        <button>Paper
+        <button class="disabled">Paper
           <img class="icon mirror" src="./icons/paper.png">
         </button>
-				<button>Scissors
+				<button class="disabled">Scissors
           <img class="icon mirror" src="./icons/scissors.png">
         </button>
       </div>
