--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
           <img src="./icons/player.png">
         </div>
         <div class="select-buttons">
-          <button>Rock
+          <button value="Rock" class="btHover">Rock
             <img class="icon" src="./icons/rock.png">
           </button>
-          <button>Paper
+          <button value="Paper" class="btHover">Paper
             <img class="icon" src="./icons/paper.png">
           </button>
-          <button>Scissors
+          <button value="Scissors" class="btHover">Scissors
             <img class="icon" src="./icons/scissors.png">
           </button>
         </div>
@@ -45,13 +45,13 @@
           <img src="./icons/computer.png">
         </div>
         <div class="select-buttons">
-          <button class="disabled">Rock
+          <button id="rock" class="disabled">Rock
             <img class="icon mirror" src="./icons/rock.png">
           </button>
-          <button class="disabled">Paper
+          <button id="paper" class="disabled">Paper
             <img class="icon mirror" src="./icons/paper.png">
           </button>
-          <button class="disabled">Scissors
+          <button id="scissors" class="disabled">Scissors
             <img class="icon mirror" src="./icons/scissors.png">
           </button>
         </div>
@@ -61,12 +61,12 @@
       <div id="message">
         Placeholder
       </div>
-      <button id="restart">
+      <button id="restart" onClick="window.location.reload();">
         Play again
       </button>
     </div>
   </div>
 	
-	<!-- <script src="./scripts/script.js"></script> -->
+	<script src="./scripts/script.js"></script>
 </body>
 </html>
